# FastShuffle

./: CMakeLists.txt  MANIFEST.in  README.md  fastshuffle.cpp  main.cpp  pyproject.toml  setup.py  shuffle.cpp  shuffle.hpp
.github/workflows/: build_wheels.yml
tests/: test_shuffle.py
tests/data/: .gitignore  src.txt  tgt.txt
